fix(navigation): add bigger gap

--- a/src/components/navigation/styles.module.scss
+++ b/src/components/navigation/styles.module.scss
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: map.get(spacing.$rem, 32);
+    gap: map.get(spacing.$rem, 48);
     flex-shrink: 0;
     margin-right: auto;
   }
